--- a/source/sass/blocks/about-cat.scss
+++ b/source/sass/blocks/about-cat.scss
@@ -1,7 +1,7 @@
 .about-cat {
   margin: 0;
   padding: 0;
-  padding-bottom: 23px;
+  padding-bottom: 7px;
 }
 
 .about-cat__inner {
@@ -19,7 +19,7 @@
   display: flex;
 
   width: inherit;
-  margin-top: 14px;
+  margin-bottom: 15px;
 
   flex-basis: 280px;
   justify-content: space-between;
@@ -30,10 +30,14 @@
 }
 
 .about-cat__input {
+  font-family: $oswaldRegular;
+  font-size: $basicFontSize;
+  line-height: 18px;
+
   box-sizing: border-box;
-  padding-top: 10px;
+  padding-top: 12px;
   padding-right: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 13px;
   padding-left: 15px;
 
   border: $borderGrayTypeOne;
