--- a/source/sass/blocks/purpose.scss
+++ b/source/sass/blocks/purpose.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   padding-top: 23px;
-  padding-bottom: 23px;
+  padding-bottom: 24px;
 }
 
 .purpose__inner {
@@ -15,6 +15,7 @@
 }
 
 .purpose__wrapper {
+  padding-top: 4px;
   display: flex;
   flex-direction: column;
 
