--- a/source/sass/blocks/purpose.scss
+++ b/source/sass/blocks/purpose.scss
@@ -66,9 +66,10 @@
   opacity: 0.5;
 }
 
-@media (min-width: 768px) {
+//Стили для средней ширины
+@media (min-width: $mediumDeviceWidth) {
   .purpose__inner {
-    width: 720px;
+    width: 772px;
     padding-right: 71px;
     padding-left: 71px;
   }
@@ -78,16 +79,44 @@
     flex-direction: column;
 
     width: 630px;
-    padding-top: 23px;
+    padding-top: 13px;
     padding-right: 27px;
     padding-bottom: 23px;
     padding-left: 27px;
 
     border: $borderGrayTypeOne;
   }
+
+  .purpose__radio-label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
+    padding-top: 10px;
+    padding-bottom: 3px;
+    padding-left: 60px;
+    min-height: 40px;
+
+    &::before {
+      top: 10px;
+      left: -1px;
+
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .purpose__radio:checked + .purpose__radio-label::after {
+    top: 50%;
+    left: 11px;
+    transform: translateY(-25%);
+
+    width: 18px;
+    height: 18px;
+  }
 }
 
-@media (min-width: 1440px) {
+//Стили для большой ширины
+@media (min-width: $largeDeviceWidth) {
   .purpose {
     padding-top: 0;
     padding-bottom: 0;
