--- a/source/sass/blocks/purpose.scss
+++ b/source/sass/blocks/purpose.scss
@@ -124,8 +124,8 @@
 
   .purpose__inner {
     display: flex;
-    max-width: 680px;
-    padding-right: 71px;
+    max-width: 570px;
+    padding-right: 0;
     padding-left: 0;
   }
 
