--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -141,6 +141,11 @@
   }
 
   .slider__buttons {
-    padding-left: 140px;
+    padding-left: 39px;
+    padding-right: 110px
+  }
+
+  .slider__toggle {
+    width: 428px;
   }
 }
