--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -167,9 +167,10 @@
   }
 
   .program-form__container {
+    box-sizing: border-box;
     display: flex;
 
-    width: $largeDeviceWidth;
+    width: 1220px;
     margin: 0 auto;
 
     justify-content: space-between;
