сделал стили состояний ссылок и кнопок для index.html и catalog.html

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -16,4 +16,19 @@
 
   color: $fourthFontColor;
   background-color: $bgColorBasic;
+
+  &:hover {
+    background-color: $bgColorHover;
+  }
+
+  &:focus {
+    background-color: $bgColorHover;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: $bgColorHover;
+  }
 }
+
+
