--- a/source/sass/blocks/purpose.scss
+++ b/source/sass/blocks/purpose.scss
@@ -15,11 +15,11 @@
 }
 
 .purpose__wrapper {
-  padding-top: 4px;
   display: flex;
   flex-direction: column;
 
   width: $smallDeviceWidth;
+  padding-top: 4px;
 }
 
 .purpose__radio-label {
@@ -89,12 +89,14 @@
 
   .purpose__radio-label {
     display: flex;
-    align-items: center;
-    margin-bottom: 0px;
+
+    min-height: 40px;
+    margin-bottom: 0;
     padding-top: 10px;
     padding-bottom: 3px;
     padding-left: 60px;
-    min-height: 40px;
+
+    align-items: center;
 
     &::before {
       top: 10px;
@@ -108,10 +110,11 @@
   .purpose__radio:checked + .purpose__radio-label::after {
     top: 50%;
     left: 11px;
-    transform: translateY(-25%);
 
     width: 18px;
     height: 18px;
+
+    transform: translateY(-25%);
   }
 }
 
@@ -124,14 +127,16 @@
 
   .purpose__inner {
     display: flex;
+
     max-width: 570px;
     padding-right: 0;
     padding-left: 0;
   }
 
   .purpose__wrapper {
-    box-sizing: border-box;
     display: flex;
+
+    box-sizing: border-box;
     width: 570px;
     padding-top: 19px;
     padding-bottom: 22px;
@@ -152,9 +157,10 @@
   .purpose__radio:checked + .purpose__radio-label::after {
     top: 50%;
     left: 11px;
-    transform: translateY(-43%);
 
     width: 18px;
     height: 18px;
+
+    transform: translateY(-43%);
   }
 }
