--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,8 +22,10 @@ $largeFontSize: 36px;
 $bigFontSize: 60px;
 
 $basicFontColor: #111111;
+$basicFontColorActived: rgba(17, 17, 17, 0.3);
 $secondaryFontColor: #222222;
 $thirdFontColor: #444444;
+$thirdFontColorActived: rgba(68, 68, 68, 0.3);
 $fourthFontColor: #ffffff;
 
 $basicLineHeight: 16px;
@@ -35,6 +37,8 @@ $largeLineHeight: 60px;
 //Button
 $bgColorBasic: #68b738;
 $bgColorSecondary: #f2f2f2;
+$bgColorHover: #5eaa2f;
+$bgColorSecondaryHover: #ebebeb;
 
 //Background
 $bgColorTypeOne: #f2f2f2;
