--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -8,6 +8,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 @media (min-width: 768px) {
   body {
     min-width: 768px;
