--- a/source/sass/blocks/table-properties.scss
+++ b/source/sass/blocks/table-properties.scss
@@ -49,7 +49,7 @@
   .table-properties {
     font-size: $basicFontSize;
 
-    margin-bottom: 31px;
+    margin-bottom:0;
   }
 
   .table-properties__property--align {
